# w21-swpm-audiofy

./: .gitignore  CMakeLists.txt  README.md
audiofy/: CMakeLists.txt
audiofy/include/: al_file.h  al_io.h  al_util.h
audiofy/include/imgui/: ImSequencer.h
audiofy/lib/: SoundTouchDLL_x64.lib
audiofy/src/: Application.cpp  Application.h  main.cpp
audiofy/src/audio/: AudioContext.cpp  AudioContext.h  AudioMixer.cpp  AudioMixer.h  AudioWorkspace.cpp  AudioWorkspace.h
audiofy/src/gui/: GuiMain.cpp  GuiMain.h  gui_file.cpp  gui_file.h
audiofy/src/gui/components/: DeviceListComponent.cpp  DeviceListComponent.h  EffectWindow.cpp  EffectWindow.h  IComponent.cpp  IComponent.h  controlElements.cpp  controlElements.h  cut.h  equalizer.h  fileDialog.cpp  fileDialog.h  leveling.h  mix.cpp  mix.h  plot.cpp  plot.h  projectFileListComponent.cpp  projectFileListComponent.h  toolbar.cpp  toolbar.h
audiofy/src/soundprocessor/: SoundProcessor.cpp  SoundProcessor.h
audiofy/src/soundprocessor/effects/: Effect.h  Overmodulation.h  Pitch.h  Tempo.h  Volume.h
audiofy/src/win32/: ay_fileManager.cpp  ay_fileManager.h
audiolib/: CMakeLists.txt
audiolib/dead/: dummyPlayback.cpp  win32_audio.cpp  win32_audio.h
audiolib/platform/src/: al_core_util.cpp  al_debug.cpp  al_debug.h  al_device.cpp  al_device.h  al_error.cpp  al_error.h  al_file.cpp  al_file.h  al_io.cpp  al_player.cpp  al_player.h  al_util.cpp  al_util.h  audioDevice.cpp  audioDevice.h  audioPlayer.cpp  audioPlayer.h  dummyPlayback.cpp  dummyPlayback.h  dummyWavPlayback.cpp  dummyWavPlayback.h  memUtil.h  win32_audio.cpp  win32_audio.h  win32_framework.h
audiolib_examples/: .gitignore  CMakeLists.txt  imgui.vcxproj
audiolib_examples/audiolib_devices/src/: example_devices.cpp  example_devices.h
audiolib_examples/decode_playback_buffers/src/: gui_test.cpp  gui_test.h  playback_example.cpp  playback_example.h
audiolib_examples/gui_primer/src/: gui_example.cpp  gui_example.h
audiolib_examples/include/: al_core_util.h  al_device.h  al_file.h  al_player.h  types.h  win32_framework.h
audiolib_examples/src/: main.cpp
audiolib_examples/src/components/: controlElements.h  mix.h  plot.h  toolbar.h
audiolib_examples/src/win32/: ay_fileManager.h
audiolib_examples/vorbis/ogg/: ogg.h
gui/: Makefile  build_win32.bat  imgui.vcxproj
gui/src/: main.cpp
gui/src/components/: cut.h  fileDialog.h  mix.h  plot.h  toolbar.h
